// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WHEN enableChildLinks > %p HTML: enableChildLinks: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p>foo test</p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`WHEN enableHierarchyDisplay is set to false > %p HTML: enableHierarchyDisplay: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><a href="/foo.ch1.html">Ch1</a></p>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`WHEN enableHierarchyDisplay is set to true > %p HTML: enableHierarchyDisplay: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><a href="/foo.ch1.html">Ch1</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`WHEN hierarchyDisplayTitle is set to 'Better Children'  > %p HTML: hierarchyDisplayTitle: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p><a href="/foo.ch1.html">Ch1</a></p>
<hr>
<strong>Better Children</strong>
<ol>
<li><a href="/notes/foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`WHEN note enableChildLinks = false > %p HTML: noEnableChildLinks: PUBLISHING 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo<a aria-hidden="true" class="anchor-heading icon-link" href="#foo"></a></h1>
<p>foo test</p>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;
